# weekly_menu_generator

./: model_architecture  pyproject.toml
 .vscode/: settings.json
data/: Basis.csv  Days.csv  Follow_up.csv  Garrison.csv  Optional.csv  Protein.csv  main_menu.csv
weekly_menu_generator/: main.ipynb  main.py  predict_and_convert.py  train_model.py
weekly_menu_generator/model/: entrada_final.npy  modelo_cardapio.keras
weekly_menu_generator/model/metrics/: metrics.json
weekly_menu_generator/model/visualization/: view_arquitecture.py
weekly_menu_generator/predictions/: cardapio_predito.xlsx
