[project]
name = "weekly-menu-generator"
version = "0.1.0"
description = "Model to predict menus based on a neural network and previous menus"
authors = [
    {name = "Maxnasc7"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
