[project]
name = "weekly-menu-generator"
version = "0.1.0"
description = "Model to predict menus based on a neural network and previous menus"
authors = [
    {name = "Maxnasc7"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "tensorflow[and-cuda] (>=2.19.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ann-visualizer (>=2.5,<3.0)",
    "graphviz (>=0.21,<0.22)",
    "pydot (>=4.0.1,<5.0.0)",
    "networkx (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
